[gd_scene load_steps=8 format=3 uid="uid://d3rxxvccy5nlr"]

[ext_resource type="Script" uid="uid://bodf878mrenpf" path="res://core/thief_car/thief_car.gd" id="1_1ss3k"]
[ext_resource type="Texture2D" uid="uid://dxik0npp1s6j2" path="res://core/thief_car/thief_car_sprites.png" id="2_vomd5"]
[ext_resource type="Texture2D" uid="uid://d1sge6ua7f628" path="res://core/thief_car/thief_car_head_lights.png" id="3_pfoi7"]
[ext_resource type="Texture2D" uid="uid://b52iigx68pmyb" path="res://core/thief_car/thief_car_tail_lights.png" id="4_sgtvf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4vvat"]
size = Vector2(456, 184)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4vvat"]
cull_mode = 1
polygon = PackedVector2Array(8, -80, -168, -56, -184, -16, -184, 40, -168, 56, -112, 64, 144, 64, 184, 56, 192, 48, 192, -16, 184, -48, 176, -56, 88, -80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_seo5q"]
size = Vector2(352, 48)

[node name="ThiefCar" type="CharacterBody2D"]
disable_mode = 1
motion_mode = 1
script = ExtResource("1_1ss3k")

[node name="InteractionArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea2D"]
position = Vector2(8, -64)
shape = SubResource("RectangleShape2D_4vvat")
debug_color = Color(0.46, 0.291333, 0, 0.27451)

[node name="CarSprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(0, -56)
scale = Vector2(8, 8)
texture = ExtResource("2_vomd5")
vframes = 3
frame = 2
region_rect = Rect2(0, 0, 448, 160)

[node name="LightOccluder2D" type="LightOccluder2D" parent="CarSprite2D"]
visible = false
position = Vector2(0, 1)
scale = Vector2(0.125, 0.125)
occluder = SubResource("OccluderPolygon2D_4vvat")

[node name="HeadLights" type="PointLight2D" parent="CarSprite2D"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(25, 1)
scale = Vector2(0.125, 0.125)
color = Color(0.985389, 0.939989, 0.696828, 1)
energy = 0.6
shadow_enabled = true
shadow_filter_smooth = 5.0
texture = ExtResource("3_pfoi7")
offset = Vector2(-200, 0)
metadata/_edit_lock_ = true

[node name="TailLights" type="PointLight2D" parent="CarSprite2D"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(-24, 0)
scale = Vector2(0.125, 0.125)
color = Color(0.981995, 0.514889, 0.452249, 1)
energy = 0.3
shadow_enabled = true
shadow_filter_smooth = 5.0
texture = ExtResource("4_sgtvf")
offset = Vector2(192, 0)
metadata/_edit_lock_ = true

[node name="CarCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -80)
shape = SubResource("RectangleShape2D_seo5q")

[node name="CookieDropRect" type="ReferenceRect" parent="."]
unique_name_in_owner = true
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -228.0
offset_right = -40.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(0.761811, 0, 1, 1)
border_width = 2.0
editor_only = false
